
====================================================================================
===  version 0.2
====================================================================================
высотомер
    превышение площадки приземления

====================================================================================
===  version 0.1
====================================================================================
- дисплей - обработчик отрисовки содержимого на экране

- меню
-    вертикальным списком
-    режим редактирования значения
-    моргание сообщением
-    функции перехода в подменю
-    переделка старого меню в новый формат

- кнопки
-    обработчик короткого нажатия
-    обработчик длинного нажатия
-    прерывания
-    защита от дребезга

на главном экране
-    длинное нажатие на верхнюю кнопку - включение/выключение подсветки
    длинное нажатие на нижнюю
        принудительное включение логирования, если оно сейчас не производится совсем
        выключение логирования, если оно сейчас включенно принудительно

- жпс
-    отображение компаса
-    направление и расстояние до выбранной точки
-    текущие координаты
-    горизонтальная скорость

- высотомер
-    страница с отображением высоты в падении
-    страница с отображением жпс + расст до точки + текущей высоты + скорости (гориз, верт)
-    меню
-        принудительная калибровка (On Ground)
-        разрешение принудительной калибровки: нет, "на земле", всегда
-        выбор автоматической калибровки: нет, автоматически на земле
-        переключать ли экран в падении автоматически в отображение только высоты (запрещать переключать экран в падении)
-        куда переключать экран под куполом: не переключать, жпс, часы, жпс+высота (по умолч)
-        куда переключать экран после приземления: не переключать, жпс (по умолч), часы, жпс+высота
-        куда переключать экран при включении: запоминать после выключения, все варианты экрана