@@ -4,6 +4,10 @@
 ====================================================================================
 высотомер
     превышение площадки приземления
+eeprom
+    функции чтения из памяти (при инициализации) все при выполнении .end заного сохраняют в память,
+    т.к. используется getDataPtr, который помечает блок как изменённый,
+    надо сделать, чтобы при чтении, блок не метился как изменённый
 
 ====================================================================================
 ===  version 0.1
